--- a/css/style.css
+++ b/css/style.css
@@ -78,25 +78,29 @@ header div img{
 main{
     display: flex;
     justify-content: flex-end;
-    padding: 100px 0;
+   
 }
-section{
+ main section{
     width: 80%;
     flex-wrap: wrap;
     display: flex;
+    padding: 100px 0;
+   
 }
-section>div{
-    overflow: hidden;
+main section>div{
     margin: 25px;
+    width: 250px;
   
 }
-section>div>div{
+main section>div>div {
+    width: 250px;/******largeur de la div*********/
+    height: 250px;
     position: relative;
-    }
+    overflow: hidden;
+}
 
 
-
-section>div>div div{
+main section>div>div div{
       width: 250px;/******largeur de la div*********/
       height: 250px;
       font-size: 20px;
@@ -109,55 +113,89 @@ section>div>div div{
        left: 0;
        background: black;
        color: white;
-    opacity: 0.5;}
+    opacity: 0.5;
+}
     
-       
-
-section div h2{
+main section>div>div  img{
+    width: 100%;
+}
+main section div h2{
     text-transform: uppercase;
 
 }
 .haut div{
-    transform: translateY(200%);
+    transform: translateY(105%);
     transition: 1s;
 }
 .haut:hover div{
     transform: translatey(0);
 }
 .bas div{
-    transform: translateX(-200%);
+    transform: translateX(-105%);
     transition: 1s;
 }
 .bas:hover div{
     transform: translateX(0);
 }
-footer {
-    height: 80vh;
+
+footer section {
+    
     background: black;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 150px 0;
+    
 }
-footer>div:first-of-type{
+footer>section>div:first-of-type{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 300px;
     width: 350px;
+   
+
+    
+    
 }
-footer>div>div:first-of-type img {
+footer>section>div>div:first-of-type {
+    border-right: 2px solid white;
+
+    
+}
+footer>section>div>div:last-of-type {
+    padding-left: 20px;
+
+    
+}
+footer>section>div>div:first-of-type img {
     height: 150px;
     width: 150px;
     margin: 20px;
+
+    
 }
-footer>div>div:nth-last-of-type(2){
+ 
+  
+footer>section>div:nth-of-type(2){
     color: white;
     font-size: large;
     margin: 20px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+   
 }
-footer div div p{
+footer>section>div:nth-of-type(2) a{
+
+    margin:0 15px;
+   
+}
+footer>section div div p{
     color: azure;
     text-transform: uppercase;
     font-family: 'BigN';
+    flex-direction: column;
+    justify-content: flex-end;
 }
